--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-fastapi[standard]
-sqlalchemy
-python-jose[cryptography]
-passlib[bcrypt]
+fastapi[standard]>=0.104.1
+sqlalchemy>=2.0.23
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4
+bcrypt==4.0.1
+python-dotenv>=1.0.0
+uvicorn>=0.24.0
